# docs/swagger.json
@@ -9,6 +9,44 @@
     "host": "localhost:8084",
     "basePath": "/",
     "paths": {
+        "/api/action/dislike/{id}": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "react to user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "api"
+                ],
+                "summary": "Reaction",
+                "operationId": "dislike",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Dislike"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/api/action/like/": {
             "get": {
                 "security": [
@@ -41,6 +79,44 @@
                 }
             }
         },
+        "/api/action/like/{id}": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "react to user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "api"
+                ],
+                "summary": "Reaction",
+                "operationId": "like",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Like"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/api/action/rate/": {
             "get": {
                 "security": [
@@ -66,44 +142,6 @@
                         "schema": {
                             "$ref": "#/definitions/model.UserRecommendation"
                         }
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            }
-        },
-        "/api/action/{like/dislike}}/{id}": {
-            "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "react to user",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "api"
-                ],
-                "summary": "Reaction",
-                "operationId": "react",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.Reaction"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "401": {
-                        "description": "Unauthorized"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -249,7 +287,7 @@
                 }
             }
         },
-        "/api/photos/{id}": {
+        "/api/photos/{filename}": {
             "delete": {
                 "security": [
                     {
@@ -452,22 +490,28 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/users_handler.SignInBody"
+                            "$ref": "#/definitions/model.SignInBody"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "token",
+                        "description": "TokenResponse",
                         "schema": {
-                            "$ref": "#/definitions/users_handler.tokenResp"
+                            "$ref": "#/definitions/api.TokenResponse"
                         }
                     },
                     "400": {
-                        "description": "Bad Request"
+                        "description": "ErrResponse",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrResponse"
+                        }
                     },
                     "500": {
-                        "description": "Internal Server Error"
+                        "description": "ErrResponse",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrResponse"
+                        }
                     }
                 }
             }
@@ -499,22 +543,58 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "idResponse",
+                        "description": "IdResponse",
                         "schema": {
-                            "$ref": "#/definitions/users_handler.idResponse"
+                            "$ref": "#/definitions/api.IdResponse"
                         }
                     },
                     "400": {
-                        "description": "Bad Request"
+                        "description": "ErrResponse",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrResponse"
+                        }
                     },
                     "500": {
-                        "description": "Internal Server Error"
+                        "description": "ErrResponse",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrResponse"
+                        }
                     }
                 }
             }
         }
     },
     "definitions": {
+        "api.ErrResponse": {
+            "type": "object",
+            "properties": {
+                "err": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.IdResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "msg": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.TokenResponse": {
+            "type": "object",
+            "properties": {
+                "msg": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
         "files_handlers.PhotoIdResponse": {
             "type": "object",
             "properties": {
@@ -523,7 +603,18 @@
                 }
             }
         },
-        "model.Reaction": {
+        "model.Dislike": {
+            "type": "object",
+            "properties": {
+                "reaction_id": {
+                    "type": "integer"
+                },
+                "reaction_type": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.Like": {
             "type": "object",
             "properties": {
                 "match_id": {
@@ -533,6 +624,21 @@
                     "type": "integer"
                 },
                 "reaction_type": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.SignInBody": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 }
             }
@@ -668,37 +774,6 @@
                         3,
                         4
                     ]
-                }
-            }
-        },
-        "users_handler.SignInBody": {
-            "type": "object",
-            "required": [
-                "email",
-                "password"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "users_handler.idResponse": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "users_handler.tokenResp": {
-            "type": "object",
-            "properties": {
-                "token": {
-                    "type": "string"
                 }
             }
         }
