# internal/server/handler/users_handler/sign_up.go
@@ -1,7 +1,6 @@
 package users_handler
 
 import (
-	"fmt"
 	"net/http"
 
 	"github.com/DimaGlobin/matchme/internal/lib/api"
@@ -18,10 +17,6 @@ type SignUpHandler struct {
 	service *service.Service
 }
 
-type idResponse struct {
-	Id uint64 `json:"id"`
-}
-
 func NewSignUpHandler(log *slog.Logger, srv *service.Service) *SignUpHandler {
 	return &SignUpHandler{
 		logger:  log,
@@ -36,9 +31,9 @@ func NewSignUpHandler(log *slog.Logger, srv *service.Service) *SignUpHandler {
 // @Accept  json
 // @Produce  json
 // @Param input body model.User true "User information"
-// @Success 200 {object} idResponse "idResponse"
-// @Failure 400
-// @Failure 500
+// @Success 200 {object} api.IdResponse "IdResponse"
+// @Failure 400 {object} api.ErrResponse "ErrResponse"
+// @Failure 500 {object} api.ErrResponse "ErrResponse"
 // @Router /auth/sign_up [post]
 func (s *SignUpHandler) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 	user := &model.User{}
@@ -49,25 +44,26 @@ func (s *SignUpHandler) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 
 	err := render.DecodeJSON(r.Body, user)
 	if err != nil {
-		msg := "Unable to decode request body"
-		log.Error(msg, sl.Err(err))
-		api.Respond(w, r, http.StatusBadRequest, msg)
+		log.Error(api.DecodeError, sl.Err(err))
+		api.Respond(w, r, http.StatusBadRequest, api.DecodeError)
 
 		return
 	}
 
 	id, err := s.service.UsersServiceInt.CreateUser(user)
 	if err != nil {
-		msg := err.Error()
-		log.Error(msg, sl.Err(err))
-		api.Respond(w, r, http.StatusInternalServerError, err.Error())
+		log.Error(err.Error(), sl.Err(err))
+		api.Respond(w, r, http.StatusInternalServerError, api.ErrResponse{
+			Err: err.Error(),
+		})
 
 		return
 	}
 
-	log.Info(fmt.Sprintf("User was successfully created, id: %d", id))
-	api.Respond(w, r, http.StatusOK, idResponse{
-		Id: id,
+	log.Info(api.CreationSucceeded)
+	api.Respond(w, r, http.StatusOK, api.IdResponse{
+		Id:  id,
+		Msg: api.CreationSucceeded,
 	})
 
 }
